Adds support for viewing master file.

--- a/templates/page.html
+++ b/templates/page.html
@@ -30,6 +30,12 @@
                     <li>
                         <a href="catalog.html">The Catalog</a>
                     </li>
+                    <li>
+                        <a href="selections.html">Selections</a>
+                    </li>
+                    <li>
+                        <a href="masterfile.html">Master File</a>
+                    </li>
                 </ul>
             </div>
         </nav>
