Preliminary display of MARC file.

--- a/templates/page.html
+++ b/templates/page.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="masterfile.html">Master File</a>
                     </li>
+                    <li>
+                        <a href="marcfile.html">MARC File</a>
+                    </li>
                 </ul>
             </div>
         </nav>
