--- a/templates/page.html
+++ b/templates/page.html
@@ -36,8 +36,17 @@
                     <li>
                         <a href="masterfile.html">Master File</a>
                     </li>
-                    <li>
-                        <a href="marcfile.html">MARC File</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MARC Files<span class="caret"/>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="princeton-marcfile.html">Princeton MARC File</a>
+                            </li>
+                            <li>
+                                <a href="heidelberg-marcfile.html">Heidelberg MARC File</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
