--- a/templates/page.html
+++ b/templates/page.html
@@ -4,11 +4,9 @@
         <title data-template="config:app-title">App Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta data-template="config:app-meta"/>
-        <link rel="shortcut icon" href="$shared/resources/images/exist_icon_16x16.ico"/>
         <link rel="stylesheet" type="text/css" href="$shared/resources/css/bootstrap-3.0.3.min.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
         <script type="text/javascript" src="$shared/resources/scripts/jquery/jquery-1.7.1.min.js"/>
-        <script type="text/javascript" src="$shared/resources/scripts/loadsource.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/bootstrap-3.0.3.min.js"/>
     </head>
     <body id="body">
@@ -28,34 +26,15 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="catalog.html">The Catalog</a>
-                    </li>
-                    <li>
-                        <a href="selections.html">Selections</a>
-                    </li>
-                    <li>
-                        <a href="masterfile.html">Master File</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MARC Files<span class="caret"/>
+                        <a href="catalogo.html">Browse the <em>Catalogo</em>
                         </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="princeton-marcfile.html">Princeton MARC File</a>
-                            </li>
-                            <li>
-                                <a href="heidelberg-marcfile.html">Heidelberg MARC File</a>
-                            </li>
-                        </ul>
+                    </li>
+                    <li>
+                        <a href="selections.html">Search</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <div id="content" class="container"/>
-        <footer>
-            <a class="poweredby" href="http://exist-db.org">
-                <img src="$shared/resources/images/powered-by.svg" alt="Powered by eXist-db"/>
-            </a>
-        </footer>
+        <main id="content" class="container"/>
     </body>
 </html>
